Meaningless change to manpage; do not merge
Signed-off-by: Dan Mick <dan.mick@redhat.com>

--- a/man/ceph_selinux.8
+++ b/man/ceph_selinux.8
@@ -1,6 +1,6 @@
 .TH  "ceph_selinux"  "8"  "16-02-11" "ceph" "SELinux Policy ceph"
 .SH "NAME"
-ceph_selinux \- Security Enhanced Linux Policy for the ceph processes
+ceph_selinux \- Security Enhanced Linux Policy for ceph processes
 .SH "DESCRIPTION"
 
 Security-Enhanced Linux secures the ceph processes via flexible mandatory access control.
