qa: run-standalone.sh improvements
Signed-off-by: David Zafman <dzafman@redhat.com>
(cherry picked from commit 8c768050a59d61866398ca4c549f68663a0e09e9)

--- a/qa/standalone/README
+++ b/qa/standalone/README
@@ -12,7 +12,7 @@ You can run them in a git checkout + build directory as well:
   * The qa/run-standalone.sh will run all of them in sequence.  This is slow
      since there is no parallelism.
 
-  * You can run an individual script by passing these environment args.  For
-    example, if you are in the build/ directory,
+  * You can run individual script(s) by specifying the basename or path below
+    qa/standalone as arguments to qa/run-standalone.sh.
 
-PATH=$PATH:bin CEPH_ROOT=.. CEPH_LIB=lib ../qa/standalone/mon/misc.sh
+../qa/run-standalone.sh misc.sh osd/osd-dup.sh
