--- a/doc/radosgw/s3.rst
+++ b/doc/radosgw/s3.rst
@@ -40,7 +40,7 @@ The following table describes the support status for current Amazon S3 functiona
 +---------------------------------+-----------------+----------------------------------------+
 | **Bucket Lifecycle**            | Supported       | Removing expired files is supported    |
 +---------------------------------+-----------------+----------------------------------------+
-| **Policy (Buckets, Objects)**   | Not Supported   | ACLs are supported                     |
+| **Policy (Buckets, Objects)**   | Supported       | ACLs & bucket policies are supported   |
 +---------------------------------+-----------------+----------------------------------------+
 | **Bucket Website**              | Supported       |                                        |
 +---------------------------------+-----------------+----------------------------------------+
@@ -72,6 +72,9 @@ The following table describes the support status for current Amazon S3 functiona
 +---------------------------------+-----------------+----------------------------------------+
 | **Multipart Uploads**           | Supported       |                                        |
 +---------------------------------+-----------------+----------------------------------------+
+| **Object Tagging**              | Supported       | Not supported in bucket policy/LC rules|
++---------------------------------+-----------------+----------------------------------------+
+
 
 Unsupported Header Fields
 -------------------------
