rgw/pubsub: fix documentation link errors
Signed-off-by: Yuval Lifshitz <yuvalif@yahoo.com>

--- a/doc/radosgw/s3.rst
+++ b/doc/radosgw/s3.rst
@@ -29,53 +29,53 @@ Features Support
 
 The following table describes the support status for current Amazon S3 functional features:
 
-+---------------------------------+-----------------+----------------------------------------+
-| Feature                         | Status          | Remarks                                |
-+=================================+=================+========================================+
-| **List Buckets**                | Supported       |                                        |
-+---------------------------------+-----------------+----------------------------------------+
-| **Delete Bucket**               | Supported       |                                        |
-+---------------------------------+-----------------+----------------------------------------+
-| **Create Bucket**               | Supported       | Different set of canned ACLs           |
-+---------------------------------+-----------------+----------------------------------------+
-| **Bucket Lifecycle**            | Supported       | Removing expired files is supported    |
-+---------------------------------+-----------------+----------------------------------------+
-| **Policy (Buckets, Objects)**   | Supported       | ACLs & bucket policies are supported   |
-+---------------------------------+-----------------+----------------------------------------+
-| **Bucket Website**              | Supported       |                                        |
-+---------------------------------+-----------------+----------------------------------------+
-| **Bucket ACLs (Get, Put)**      | Supported       | Different set of canned ACLs           |
-+---------------------------------+-----------------+----------------------------------------+
-| **Bucket Location**             | Supported       |                                        |
-+---------------------------------+-----------------+----------------------------------------+
-| **Bucket Notification**         | Supported       | `S3 Notification Compatibility`_       |
-+---------------------------------+-----------------+----------------------------------------+
-| **Bucket Object Versions**      | Supported       |                                        |
-+---------------------------------+-----------------+----------------------------------------+
-| **Get Bucket Info (HEAD)**      | Supported       |                                        |
-+---------------------------------+-----------------+----------------------------------------+
-| **Bucket Request Payment**      | Supported       |                                        |
-+---------------------------------+-----------------+----------------------------------------+
-| **Put Object**                  | Supported       |                                        |
-+---------------------------------+-----------------+----------------------------------------+
-| **Delete Object**               | Supported       |                                        |
-+---------------------------------+-----------------+----------------------------------------+
-| **Get Object**                  | Supported       |                                        |
-+---------------------------------+-----------------+----------------------------------------+
-| **Object ACLs (Get, Put)**      | Supported       |                                        |
-+---------------------------------+-----------------+----------------------------------------+
-| **Get Object Info (HEAD)**      | Supported       |                                        |
-+---------------------------------+-----------------+----------------------------------------+
-| **POST Object**                 | Supported       |                                        |
-+---------------------------------+-----------------+----------------------------------------+
-| **Copy Object**                 | Supported       |                                        |
-+---------------------------------+-----------------+----------------------------------------+
-| **Multipart Uploads**           | Supported       |                                        |
-+---------------------------------+-----------------+----------------------------------------+
-| **Object Tagging**              | Supported       | See :ref:`tag_policy` for Policy verbs |
-+---------------------------------+-----------------+----------------------------------------+
-| **Storage Class**               | Not Supported   | Use **Bucket Location** as alternative |
-+--------------------------------------------------------------------------------------------+
++---------------------------------+-----------------+------------------------------------------+
+| Feature                         | Status          | Remarks                                  |
++=================================+=================+==========================================+
+| **List Buckets**                | Supported       |                                          |
++---------------------------------+-----------------+------------------------------------------+
+| **Delete Bucket**               | Supported       |                                          |
++---------------------------------+-----------------+------------------------------------------+
+| **Create Bucket**               | Supported       | Different set of canned ACLs             |
++---------------------------------+-----------------+------------------------------------------+
+| **Bucket Lifecycle**            | Supported       | Removing expired files is supported      |
++---------------------------------+-----------------+------------------------------------------+
+| **Policy (Buckets, Objects)**   | Supported       | ACLs & bucket policies are supported     |
++---------------------------------+-----------------+------------------------------------------+
+| **Bucket Website**              | Supported       |                                          |
++---------------------------------+-----------------+------------------------------------------+
+| **Bucket ACLs (Get, Put)**      | Supported       | Different set of canned ACLs             |
++---------------------------------+-----------------+------------------------------------------+
+| **Bucket Location**             | Supported       |                                          |
++---------------------------------+-----------------+------------------------------------------+
+| **Bucket Notification**         | Supported       | See `S3 Notification Compatibility`_     |
++---------------------------------+-----------------+------------------------------------------+
+| **Bucket Object Versions**      | Supported       |                                          |
++---------------------------------+-----------------+------------------------------------------+
+| **Get Bucket Info (HEAD)**      | Supported       |                                          |
++---------------------------------+-----------------+------------------------------------------+
+| **Bucket Request Payment**      | Supported       |                                          |
++---------------------------------+-----------------+------------------------------------------+
+| **Put Object**                  | Supported       |                                          |
++---------------------------------+-----------------+------------------------------------------+
+| **Delete Object**               | Supported       |                                          |
++---------------------------------+-----------------+------------------------------------------+
+| **Get Object**                  | Supported       |                                          |
++---------------------------------+-----------------+------------------------------------------+
+| **Object ACLs (Get, Put)**      | Supported       |                                          |
++---------------------------------+-----------------+------------------------------------------+
+| **Get Object Info (HEAD)**      | Supported       |                                          |
++---------------------------------+-----------------+------------------------------------------+
+| **POST Object**                 | Supported       |                                          |
++---------------------------------+-----------------+------------------------------------------+
+| **Copy Object**                 | Supported       |                                          |
++---------------------------------+-----------------+------------------------------------------+
+| **Multipart Uploads**           | Supported       |                                          |
++---------------------------------+-----------------+------------------------------------------+
+| **Object Tagging**              | Supported       | See :ref:`tag_policy` for Policy verbs   |
++---------------------------------+-----------------+------------------------------------------+
+| **Storage Class**               | Not Supported   | Use **Bucket Location** as alternative   |
++----------------------------------------------------------------------------------------------+
 
 
 Unsupported Header Fields
@@ -98,4 +98,4 @@ The following common request header fields are not supported:
 +----------------------------+------------+
 
 .. _Amazon S3 API: http://docs.aws.amazon.com/AmazonS3/latest/API/APIRest.html
-.. _S3 Notification Compatibility: ./s3_notification_compatibility.rst
+.. _S3 Notification Compatibility: ../s3_notification_compatibility
