--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ceph (14.2.4-1) stable; urgency=medium
+
+  * New upstream release
+
+ -- Ceph Release Team <ceph-maintainers@ceph.com>  Fri, 13 Sep 2019 14:07:41 -0400
+
 ceph (14.2.3-1) stable; urgency=medium
 
   * New upstream release
